--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 
     <packaging>war</packaging>
 
-    <!--FIXME1 Update other libraries' versions-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -19,17 +18,15 @@
     </parent>
 
     <properties>
-        <commons-io.version>2.5</commons-io.version>
-        <commons-lang.version>3.6</commons-lang.version>
+        <commons-io.version>2.6</commons-io.version>
+        <commons-lang.version>3.8.1</commons-lang.version>
         <cucumber.version>1.2.5</cucumber.version>
-        <gson.version>2.8.1</gson.version>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
-        <maven.copy-plugin.version>1.0</maven.copy-plugin.version>
-        <maven.build.helper.plugin.version>1.10</maven.build.helper.plugin.version>
-        <maven.failsafe.plugin.version>2.18.1</maven.failsafe.plugin.version>
-        <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
-        <mockito.version>2.0.42-beta</mockito.version>
+        <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
+        <maven.failsafe.plugin.version>3.0.0-M3</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
+        <mockito.version>2.23.4</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-security-test.version>5.1.3.RELEASE</spring-security-test.version>
         <spring-test.version>5.1.4.RELEASE</spring-test.version>
@@ -37,7 +34,9 @@
         <start-class>quebec.virtualite.Backend-Demo.Application</start-class>
 
         <!--Backend-->
-        <rest-assured.version>2.9.0</rest-assured.version>
+        <flyway.version>5.2.4</flyway.version>
+        <h2.version>1.4.197</h2.version>
+        <rest-assured.version>3.3.0</rest-assured.version>
     </properties>
 
     <dependencies>
@@ -120,17 +119,9 @@
 
         <!--Rest-Assured-->
         <dependency>
-            <groupId>com.jayway.restassured</groupId>
+            <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!--GSON-->
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -156,11 +147,13 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
         </dependency>
     </dependencies>
 
@@ -257,34 +250,7 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--Deploy on local Tomcat-->
-            <plugin>
-                <groupId>com.coderplus.maven.plugins</groupId>
-                <artifactId>copy-rename-maven-plugin</artifactId>
-                <version>${maven.copy-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>copy-file</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <sourceFile>target/${project.build.finalName}.${project.packaging}</sourceFile>
-                            <destinationFile>${TOMCAT_HOME}/webapps/backend-demo.war</destinationFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>spring-milestone</id>
-            <url>https://repo.spring.io/libs-milestone</url>
-        </repository>
-    </repositories>
 
 </project>
