--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,14 @@ spring.main.banner-mode: "off"
 # Log
 logging:
   level.: WARN
-  level.org.springframework.web: WARN
-  level.org.hibernate: WARN
-
-  level.org.hibernate.SQL: WARN
-  level.org.hibernate.type.descriptor.sql.BasicBinder: WARN
-  level.org.hibernate.type: WARN
+  level.org:
+      hibernate:
+        SQL: WARN
+        type:
+          descriptor.sql.BasicBinder: WARN
+          value: WARN
+        value: WARN
+      springframework.web: WARN
 
 spring.jpa:
   show-sql: false
