--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <!--<version>2.0.4.RELEASE</version>-->
-        <version>2.1.2.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
         <relativePath/>
     </parent>
 
     <properties>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>3.8.1</commons-lang.version>
-        <cucumber.version>1.2.5</cucumber.version>
+        <cucumber.version>4.2.6</cucumber.version>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
         <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
@@ -87,21 +86,21 @@
 
         <!--Cucumber-->
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-spring</artifactId>
             <version>${cucumber.version}</version>
             <scope>test</scope>
