--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
         <mockito.version>2.23.4</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <reactor-test.version>3.2.9.RELEASE</reactor-test.version>
 
         <!--Backend-->
         <flyway.version>5.2.4</flyway.version>
@@ -102,6 +103,14 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--Reactor-test-->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>${reactor-test.version}</version>
             <scope>test</scope>
         </dependency>
 
