--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
         <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
         <mockito.version>2.28.2</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <reactor-test.version>3.2.9.RELEASE</reactor-test.version>
 
         <!--Backend-->
         <flyway.version>5.2.4</flyway.version>
@@ -41,7 +40,7 @@
         <!--Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
@@ -103,14 +102,6 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!--Reactor-test-->
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <version>${reactor-test.version}</version>
             <scope>test</scope>
         </dependency>
 
