--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>3.9</commons-lang.version>
         <cucumber.version>4.7.2</cucumber.version>
+        <lombok.version>1.18.10</lombok.version>
         <java.version>11</java.version>
         <junit.version>4.12</junit.version>
         <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
@@ -124,6 +125,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--Backend-->
