--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,14 @@
         <commons-lang.version>3.9</commons-lang.version>
         <cucumber.version>4.7.2</cucumber.version>
         <kotlin.version>1.4.0</kotlin.version>
-        <!--FIXME 1 Remove Lombok-->
+        <!--FIXME 1 Remove-->
         <lombok.version>1.18.10</lombok.version>
         <java.version>8</java.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13</junit.version>
         <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
         <maven.failsafe.plugin.version>3.0.0-M3</maven.failsafe.plugin.version>
         <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
-        <mockito.version>3.3.0</mockito.version>
+        <mockito.version>3.4.4</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--Backend-->
@@ -120,7 +120,6 @@
         </dependency>
 
         <!--Mockito-->
-        <!--FIXME1 Implement BDD Mockito-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -149,6 +148,7 @@
             <version>${commons-lang.version}</version>
         </dependency>
 
+        <!--FIXME 1 Remove-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
