--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,31 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.3.4.RELEASE</version>
         <relativePath/>
     </parent>
 
     <properties>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-lang.version>3.9</commons-lang.version>
-        <cucumber.version>4.7.2</cucumber.version>
-        <lombok.version>1.18.10</lombok.version>
-        <java.version>11</java.version>
-        <junit.version>4.12</junit.version>
-        <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
+        <commons-io.version>2.8.0</commons-io.version>
+        <commons-lang.version>3.11</commons-lang.version>
+<!--        <cucumber.version>6.8.1</cucumber.version>-->
+	    <cucumber.version>4.7.2</cucumber.version>
+        <lombok.version>1.18.14</lombok.version>
+        <java.version>1.8</java.version>
+        <junit.version>4.13</junit.version>
+        <maven.build.helper.plugin.version>3.2.0</maven.build.helper.plugin.version>
+<!--	    <maven.failsafe.plugin.version>3.0.0-M5</maven.failsafe.plugin.version>-->
         <maven.failsafe.plugin.version>3.0.0-M3</maven.failsafe.plugin.version>
+<!--	    <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>-->
         <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
-        <mockito.version>3.3.0</mockito.version>
+        <mockito.version>3.5.13</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--Backend-->
+<!--	    <flyway.version>7.0.2</flyway.version>-->
         <flyway.version>5.2.4</flyway.version>
-        <h2.version>1.4.199</h2.version>
+        <h2.version>1.4.200</h2.version>
+<!--	    <rest-assured.version>4.3.1</rest-assured.version>-->
         <rest-assured.version>4.0.0</rest-assured.version>
     </properties>
 
